src/scss/base/_general.scss
body {
    height: 0 !important; /*override semantic-ui default styles*/
}

a {
    text-decoration: none;
}

.hide {
    visibility: hidden;
}

.display-none {
    display: none !important;
}

.profile-photo {
    width: 20%;
}

.text-snippet {
    text-align: center;
    padding: 1em 0;
}

.container {
    margin-bottom: 5em;
    margin-top: 0.5em;
}

.title, header {
    padding: 0.5em 0em;
    margin-bottom: 0;
    font-size: 1.6em;
    text-align: center;
}

.title .large-title {
    font-size: 2.6em;
}

